--- a/USER PAGE/styletDashboard.css
+++ b/USER PAGE/styletDashboard.css
@@ -9,6 +9,12 @@ body {
     color: #f0f0f0;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden;
+}
+
 /* CSS Reset */
 * {
     margin: 0;
@@ -73,21 +79,21 @@ body {
     right: 10px; /* Adjust to position the dot */
     width: 10px; /* Dot size */
     height: 10px;
-    background-color: red; /* Dot color */
+    background-color: red; 
     border-radius: 50%;
-    border: 2px solid #2c2c2c; /* Match background color for cleaner look */
+    border: 2px solid #2c2c2c; 
 }
 
 /* Notification number badge */
 .notification-badge {
     position: absolute;
-    top: -8px; /* Adjust to position the badge */
-    right: -8px; /* Adjust to position the badge */
+    top: 8px;
+    right: 25px; 
     background-color: red;
     color: white;
     padding: 3px 6px;
-    border-radius: 50%; /* Circular shape */
-    font-size: 12px; /* Font size for badge */
+    border-radius: 50%;
+    font-size: 12px; 
     font-weight: bold;
     line-height: 1;
 }
@@ -118,7 +124,7 @@ body {
     height: calc(100vh - 50px);
     border: none;
     border-radius: 10px;
-    overflow: hidden; /* Hide any overflow */
+    overflow: hidden; 
     margin: 0;
     padding: 0;
 }
@@ -221,7 +227,7 @@ body {
 
 .payment-right-nav, .maintenance-right-nav {
     color: #0e7c3d; 
-    font-weight: bold; 
+    font-weight: 200; 
 }
 
 .payment-right-nav:hover, .maintenance-right-nav:hover {
@@ -250,7 +256,7 @@ body {
     display: flex;
     background-color: #2c2c2c; 
     color: white; 
-    padding: 10px 0; 
+    padding: 8.5px 0; 
     border-bottom: 1px solid #666; 
     border-radius: 10px;
 }
