--- a/USER PAGE/tProfile.css
+++ b/USER PAGE/tProfile.css
@@ -7,6 +7,8 @@ body {
     font-family: "Poppins", sans-serif;
     background-color: #1a1a1a; 
     color: #f0f0f0;
+    overflow: hidden;
+    height: 100%;
 }
 
 * {
@@ -19,17 +21,17 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh; 
     padding: 20px;
+    margin-left: 100px;
+    height: 1000px;
 }
 
 .profile-container {
     display: flex;
-    gap: 40px;
-    max-width: 1200px;
+    gap: 20px;
     width: 100%;
     height: 100%;
-    margin: 20px auto;
+;
 }
 
 .navigator {
@@ -40,8 +42,7 @@ body {
     border-radius: 10px;
     width: 250px;
     gap: 20px;
-    max-height: 700px; 
-    overflow-y: auto; 
+    max-height: 800px;
 }
 
 .navigator a {
@@ -73,8 +74,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-height: 700px;
-    overflow-y: auto;
+    max-height: 800px;
 }
 
 .detpro {
@@ -177,7 +177,7 @@ body {
     top: 0;
     width: 60%; 
     height: 100%; 
-    overflow: auto; 
+    overflow: hidden; 
     margin-left: 25%;
     align-items: center;
 }
@@ -270,7 +270,7 @@ body {
     color: #555;
 }
 
-h1, h2 {
+#roomDetails h1, #roomDetails h2 {
     font-size: 24px;
     margin-bottom: 15px;
     color: #007bff;
