--- a/ADVERTISEMENT/StyleForm.css
+++ b/ADVERTISEMENT/StyleForm.css
@@ -180,6 +180,11 @@ body {
     box-sizing: border-box;
 }
 
+.input-container input:focus {
+    border: none;
+    outline: none;
+}
+
 .input-container::before {
     content: '';
     position: absolute;
@@ -192,6 +197,7 @@ body {
 }
 
 .login-section button {
+    margin-top: 50px;
     padding-left: 40px; 
     padding: 10px 20px;
     background-color: #0f8e47;
@@ -199,6 +205,7 @@ body {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;
 }
 
 .login-section button:hover {
@@ -213,4 +220,9 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 50px;
+}
+
+form{
+    width: 100%;
+    display: flex;
 }
