--- a/USER PAGE/styletDashboard.css
+++ b/USER PAGE/styletDashboard.css
@@ -298,9 +298,8 @@ html, body {
     width: 100%; /* Use full width for left sections */
     background-color: #2c2c2c; 
     border-radius: 10px;
-    padding: 20px; 
+    padding: 22px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-    border: solid 1px #0e7c3d;
 }
 
 .pending-notif {  
@@ -414,6 +413,11 @@ html, body {
     font-size: 0.9rem;
 }
 
+.text-content{
+    display: flex;
+    flex-direction: column;
+}
+
 .whatsnew .content {
     display: flex;
     align-items: flex-start; 
@@ -435,7 +439,6 @@ html, body {
 .text-content a{
     color: rgb(0, 0, 255); 
     text-decoration: underline;
-    margin-left: 10px;
 }
 
 .aminities-info h1 {
@@ -540,5 +543,25 @@ html, body {
     margin-right: 5px;
 }
 
+/* Date and Time Styling */
+.date-time {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align to the left */
+    color: #f0f0f0; /* Text color */
+    font-weight: 400;
+    margin-right: 20px; /* Space between the date-time and the search bar */
+    font-size: 14px;
+}
+
+.date-time .date {
+    font-size: 1rem; /* Larger font size for the date */
+    font-weight: bold;
+}
+
+.date-time .time {
+    font-size: 0.9rem; /* Slightly smaller font size for the time */
+    color: #0e7c3d; /* Green color for the time */
+}
 
 
