--- a/USER PAGE/loginStyle.css
+++ b/USER PAGE/loginStyle.css
@@ -36,11 +36,12 @@ body {
     justify-content: center;
     border-radius: 10px;
     padding: 20px;
+    justify-content: space-between;
 }
 
 /* Left form section (image, title) */
 .form-left {
-    flex: 1;
+    width: 50%;
     border-radius: 5px 0 0 5px;
     display: flex;
     flex-direction: column;
@@ -89,7 +90,7 @@ body {
 
 /* Right form section (login form) */
 .right-form {
-    flex: 1;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.7); 
     padding: 40px;
     border-radius: 0 5px 5px 0;
@@ -97,7 +98,7 @@ body {
     flex-direction: column;
     align-items: center;
     color: white;
-    justify-content: left;
+    justify-content: center;
 }
 
 .right-form h1 {
@@ -157,11 +158,12 @@ label[for="rememberMe"]:hover {
     color: #0f8e47;
 }
 
-#rememberMe {
+#rememberMe input {
     left: 0;
     position: absolute;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 
 .login-container input:focus {
@@ -203,6 +205,10 @@ button:hover{
 
 .right-form span:hover{
     color: #0f8e47;
+}
+
+form{
+    width: 50%;
 }
 
 /* Media Query for responsiveness */
