--- a/USER PAGE/Tenant_Profile/tProfile.css
+++ b/USER PAGE/Tenant_Profile/tProfile.css
@@ -414,9 +414,12 @@ body {
     /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); */
     width: 100%;
     height: 880px;
+    align-items: center;
+    justify-content: center;
 }
 
 #updatePass{
+    margin-top: 20px;
     margin-left: 400px;
 }
 
