--- a/ADVERTISEMENT/style.css
+++ b/ADVERTISEMENT/style.css
@@ -638,5 +638,39 @@ body {
     }
 }
 
+.add {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    border: solid 2px #0f8e47;
+    width: 450px;
+    padding: 20px;
+    border-radius: 20px;
+    min-height: 500px; 
+    box-sizing: border-box;
+    align-self: stretch;
+    transition: all 0.3s ease;
+}
 
+.add:hover {
+    border-color: #0f8e47; 
+    background-color: rgba(15, 142, 71, 0.1); 
+}
 
+.add i {
+    font-size: 100px;   
+    color: #0f8e47; 
+    text-align: center;
+    transition: color 0.3s ease;
+}
+
+.add:hover i {
+    color: #ffffff; 
+}
+
+.icon-add {
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+}
