--- a/ADVERTISEMENT/back-end/receipt.css
+++ b/ADVERTISEMENT/back-end/receipt.css
@@ -24,7 +24,8 @@ body {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-    margin-top: 120px;
+    margin-top: 50px;
+}
 
 /* Header */
 h1 {
@@ -101,4 +102,15 @@ footer {
 
 footer p {
     font-size: 0.9rem;
+}
+
+.message {
+    background-color:#4dd8a3; 
+    color: #22614c;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-left: 5px solid #27AE60; 
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: 500; 
 }
