--- a/ADVERTISEMENT/style.css
+++ b/ADVERTISEMENT/style.css
@@ -759,3 +759,21 @@ select:focus {
     outline: none;
     box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
 }
+
+.login-button{
+    text-decoration: none;
+    color: white;
+    display: inline-block;
+    padding: 10px 15px;
+    border-radius: 10px;
+    background-color: #12a15f;
+}
+
+.login-button span{
+    text-decoration: underline;
+}
+
+.login-button span:hover{
+    text-decoration: underline;
+    color:#000;
+}
