--- a/MANAGEMENT/ACCOUNT_BUSINESS/accounts.css
+++ b/MANAGEMENT/ACCOUNT_BUSINESS/accounts.css
@@ -17,60 +17,12 @@ body {
 
 #wrapper {
     width: 100%;
-    max-width: 1920px;
-    min-width: 370px;
-    height: auto;
+    height: 100vh;
     overflow: auto;
     background-color: black;
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-.header {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 3px solid #12a15f;
-    padding: 10px;
-    position: fixed;
-    top: 0;
-    background-color: black;
-}
-
-.header a:hover {
-    color: #0f8e47;
-}
-
-.logo {
-    display: flex;
-    align-items: center;
-    margin-left: 20px;
-}
-
-.logo img {
-    max-width: 50px;
-    height: auto;
-}
-
-.logo span {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: white;
-    margin-top: 5px;
-    margin-left: 10px;
-}
-
-.navigator {
-    display: flex;
-    gap: 60px;
-    margin-right: 40px;
-}
-
-.navigator a {
-    color: white;
-    text-decoration: none;
 }
 
 #forms-section {
@@ -79,8 +31,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 30px;
-    width: 60%;
-    margin: 40px auto;
+    width: 40%;
     border: 2px solid #0f8e47;
     border-radius: 20px;
     height: 750px;
@@ -89,49 +40,7 @@ body {
     padding-right: 0;
 }
 
-.left-picture,
 .login-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-}
-
-.left-picture img {
-    max-width: 100%;
-    width: 10%;
-    height: auto;
-    margin-bottom: 50px;
-}
-
-.left-picture p {
-    text-align: center;
-    margin-bottom: 100px;
-}
-
-.cont {
-    border-bottom: 2px solid white;
-    width: 100%;
-    text-align: center;
-}
-
-.icons {
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-.icons img {
-    width: 30px;
-    height: 30px;
-}
-
-.login-section {
-    border-left: 2px solid #0e7c3d;
     width: 100%;
     padding: 20px;
     display: flex;
@@ -141,20 +50,8 @@ body {
 
 .login-section h1 {
     font-size: 1.5rem; 
-    margin-bottom: 20px;
+    margin-bottom: 70px;
 }
-
-/* .login-section a {
-    text-decoration: none;
-    color: white;
-    font-size: 0.8rem;
-    margin-bottom: 30px; 
-}
-
-.login-section a:hover{
-    color: #0e7c3d;
-    text-decoration: underline;
-} */
 
 .input-container {
     position: relative;
