--- a/MANAGEMENT/management.css
+++ b/MANAGEMENT/management.css
@@ -39,10 +39,10 @@ html, body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
     width: 4%;
     position: fixed;
-    top: 180px;
-    bottom: 100px;
-    left: 5px;
-    gap: 40px;
+    height: 700px;
+    left: 7px;
+    gap: 30px;
+    margin: 150px 0;
 }
 
 .navigator a {
