--- a/USER PAGE/Tenant_Maintenance/maintenance.css
+++ b/USER PAGE/Tenant_Maintenance/maintenance.css
@@ -60,7 +60,7 @@ body {
     flex-direction: column;
     margin-left: 100px;
     margin-right: 20px;
-    height: 800px;
+    height: 780px;
     box-sizing: border-box;
     align-items: center;
 }
@@ -121,12 +121,31 @@ body {
     background-color: #444;
     border-radius: 10px;
     overflow-y: auto;
-    height: 100%;
+    height: 600px;
     margin-left: 20px;
     display: flex;
     flex-direction: column;
     border: 1px solid #12a15f;
 }
+
+.maintenance-table::-webkit-scrollbar{
+    width: 0; 
+    height: 0; 
+}
+
+.maintenance-table::-webkit-scrollbar {
+    width: 1px; 
+}
+
+.maintenance-table::-webkit-scrollbar-thumb{
+    background: #0f8e47;
+    border-radius: 5px;
+}
+
+.maintenance-table::-webkit-scrollbar-thumb:hover{
+    background: #0c6a37;
+}
+
 
 /* Header Row */
 .maintenance-table-header {
@@ -141,13 +160,24 @@ body {
     font-weight: bold;
 }
 
-/* Table Columns */
+.maintenance-header-item:last-child {
+    padding-left: 0;
+}
+
 .maintenance-header-item,
 .maintenance-item {
-    flex: 1;
+    flex: 1; 
     text-align: center;
-    padding: 10px;
+    padding: 5px;
     border-right: 1px solid #12a15f;
+    width: 200px; 
+}
+
+.maintenance-item {
+    min-height: 30px; 
+    max-height: 100px; 
+    white-space: normal;
+    word-break: break-all;
 }
 
 .maintenance-header-item:last-child,
@@ -258,4 +288,28 @@ button {
 button:hover{
     background-color: white;
     color: #12a15f;
+}
+
+.delete-icon {
+    font-size: 1.5rem;      
+    color: #e74c3c;          
+    cursor: pointer;    
+    transition: color 0.3s, transform 0.3s;
+}
+
+.delete-icon:hover {
+    color: #c0392b;   
+    transform: scale(1.1);     
+}
+
+.delete-icon:active {
+    color: #9b2d2f;    
+    transform: scale(1);      
+}
+
+.maintenance-table-row .button-cell {
+    display: flex;
+    justify-content: center;   
+    align-items: center;       
+    padding: 0;              
 }
