--- a/MANAGEMENT/Room/room.css
+++ b/MANAGEMENT/Room/room.css
@@ -28,7 +28,7 @@ body {
     border-radius: 10px;
     width: calc(100% - 120px); 
     height: calc(100vh - 70px);
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .navigator {
@@ -47,11 +47,12 @@ body {
     transition: background-color 0.3s, color 0.3s;
 }
 
-.table-container, .table-container2{
+.table-container, .table-container2 {
     width: 100%;
-    max-height: 80vh; 
+    height: 100%; /* Ensure the table takes full available height */
+    max-height: calc(80vh - 40px); /* Adjusted to give room for padding */
     overflow-y: auto;
-    padding-bottom: 10px ;
+    padding-bottom: 20px;
 }
 
 table {
