--- a/MANAGEMENT/Tenant_Maintenance/tenant_maintenance.css
+++ b/MANAGEMENT/Tenant_Maintenance/tenant_maintenance.css
@@ -171,7 +171,7 @@ button:hover {
     padding: 20px;
     border-radius: 8px;
     height: 100%;
-    max-width: 500px;
+    width: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
