--- a/USER PAGE/Tenant_Dashboard/styletDashboard.css
+++ b/USER PAGE/Tenant_Dashboard/styletDashboard.css
@@ -236,6 +236,7 @@ html, body {
 
 .payment-table-container, .maintenance-table {
     width: 100%; 
+    height: 408px;
 }
 
 .table-header, .maintenance-table-header {
@@ -300,6 +301,7 @@ html, body {
     border-radius: 10px;
     padding: 22px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+    height: 408px;
 }
 
 .pending-notif {  
@@ -331,7 +333,6 @@ html, body {
 
 .pending-payment {
     display: flex;
-    flex: 1; 
     width: 60%;
     justify-content: space-between; 
     flex-direction: column;
@@ -386,7 +387,8 @@ html, body {
     display: flex;
     flex-direction: row;
     gap: 20px;
-    
+    height: 300px;
+    overflow: hidden;
 }
 
 .whatsnew {
@@ -479,6 +481,7 @@ html, body {
     width: 100%;
     margin: 20px auto;
     background-color: #363636; 
+    height: 515px;
 }
 
 .notif .icon{
