--- a/USER PAGE/Tenant_Notification/notif.css
+++ b/USER PAGE/Tenant_Notification/notif.css
@@ -19,7 +19,7 @@ body {
 
 .wrapper {
     width: 100%;
-    max-width: 1800px;
+    max-width: 1900px;
     margin: 35px auto;
     padding: 20px;
     padding-top: 60px;
@@ -28,7 +28,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    max-height: 89vh;
+    height: 820px;
     overflow-y: auto;
     margin-left: 5%;
     margin-right: 5%;
@@ -46,16 +46,16 @@ h1 {
     background-color: #2c2c2c;
     border-radius: 10px;
     padding-top: 10px;
-    margin-bottom: 20px;
+    margin-bottom: 50px;
 }
 
 .notif-container {
+    width: 100%; 
     display: flex;
     align-items: center;
     padding: 15px;
     gap: 10px;
     transition: background-color 0.3s ease;
-    border-bottom: solid 1px #0e7c3d;
     background-color: #3a3a3a;
     border-radius: 8px;
     flex-wrap: wrap;
